# smi

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: app.py  env.py  graders.py  models.py  requirements.txt  smi_scorer.py
